gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2001-01-19  Stefan Petersen  <spe@geda.seul.org>

	* scheme/auto-uref.scm: If there wasn't a question mark in the
	  uref string, the auto-ref function blew up.
	
2001-01-17  Stefan Petersen  <spe@geda.seul.org>

	* scheme/auto-uref.scm: Made the associative list,used to keep track
	  of used prefixes, using _real_ Guile associative list functions.
	
2001-01-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* docs/gschem.txt: Added a few lines about label= attribute

2001-01-11  Stefan Petersen  <spe@geda.seul.org>

	* lib/system-gschemrc.in: minor paper-sizes bug that will break
	  future typechecking.
	
	* src/g_rc.c: minor spell error in boundingbox
	
2000-12-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* docs/gschem.txt: Misc doc updates

	* README and INSTALL: minor updates

2000-12-15  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/a_pan.c: Changed o_redraw_all call to o_redraw_all_fast just
	  to speed things up a bit

	* src/gschem.c: Changed o_redraw_all call to o_redraw_all_fast just
	  to speed things up a bit

2000-12-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_preview.c: Fixed a bug relating to the preview box randomly
	  not being drawn.  Fix by Werner Hoch

2000-12-13  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Added -lregexp for CYGWIN32 build

2000-12-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_register.c: Added guile helper functions for netlist generation
	  (code by Eduard Moser and Martin Lehmann)

	* src/g_key.c: Guile bindings to generate netlists on the fly
	  (code by Eduard Moser and Martin Lehmann)

	* src/g_funcs.c: Added support functions for above
	  (code by Eduard Moser and Martin Lehmann)
