@@ -9,6 +9,14 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+
+2001-01-16  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/x_event.c, g_key.c: Fixed a bug pointed out by Thomas Lundin
+	  which was causing a core dump.  Basically, g_key_* functions
+	  were using a stale w_current pointer; switched them to use the
+	  always correct global_window_current pointer.
+	
 2001-01-19  Stefan Petersen  <spe@geda.seul.org>
 
 	* scheme/auto-uref.scm: If there wasn't a question mark in the
